@@ -17,6 +17,7 @@ COPY appid-toolbox /tools/pan-os-php/appid-toolbox
 COPY lib /tools/pan-os-php/lib
 COPY phpseclib /tools/pan-os-php/phpseclib
 COPY utils /tools/pan-os-php/utils
+COPY tests /tools/pan-os-php/tests
 
 
 # PHP library of pan-os-php
